# pickle_db

./: .autoenv  .gitignore  Pipfile  README.md  setup.cfg  setup.py
pickle_db/: __init__.py  pickle_db.py
tests/: test_pickle_db.py
