[isort]
multi_line_output=3
include_trailing_comma=True
atomic=True
force_grid_wrap=0
skip_glob=**/__init__.py
use_parentheses=True
line_length=99
sections=FUTURE,STDLIB,THIRDPARTY,EXTERNAL,FIRSTPARTY,LOCALFOLDER

[metadata]
description-file = README.md

[flake8]
max-line-length = 99
exclude =
    .git,
    __pycache__,
    .venv,
    .vscode,
    ./nic_code,
    ./migrations


[FORMAT]
max-line-length=100

[tool:pytest]
minversion = 6.0
addopts = -v -s -ra --cov-report=html -m 'not online' --disable-pytest-warnings
markers =
    online: requires internet connection. Tends to be slow


[coverage:run]
omit = *tests*